<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.myapplication.Bilan">




    <LinearLayout
        android:id="@+id/linear"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtName"

            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/user_name" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="276dp"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="Here's what we got so far:"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/txtAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:text="@string/user_age" />

        <TextView
            android:id="@+id/txtWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:text="@string/user_weight" />

        <TextView
            android:id="@+id/txtHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_height" />

        <TextView
            android:id="@+id/txtGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:text="@string/user_gender" />

        <TextView
            android:id="@+id/txtActivityLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_activity" />

        <TextView
            android:id="@+id/txtFitnessGoal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Fitness goal" />

        <TextView
            android:id="@+id/txtFitnessGoalHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/maintainWeight"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weightGoalDesc" />

        <TextView
            android:id="@+id/lblCaloriesDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calorieIntake"
            android:textColor="#000"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnStartOver"
        android:background="@color/colorAccent"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/linear"
        android:layout_alignLeft="@+id/linear"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginBottom="25dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="40dp"
        android:text="Get My Program" />








    </LinearLayout>
